--- a/app/views/avant_data/index.html.erb
+++ b/app/views/avant_data/index.html.erb
@@ -17,7 +17,9 @@
 
       <nvd3 id="scatter_plot" ng-show="checkCurrentPath('scatter_plot')" options="scatter_plot_options" data="data"></nvd3>
 
-      <div google-chart ng-show="checkCurrentPath('motion_chart')" chart="chartObject" style="height:600px; width:100%;"></div>
+      <div google-chart ng-show="checkCurrentPath('motion_chart')" chart="chartObject" style="height:300px; width:100%;"></div>
+
+      <div google-chart ng-show="checkCurrentPath('motion_chart')" chart="timelineChartObject" style="width:100%;"></div>
       
     </div>
 
