--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -123,3 +123,17 @@ div.country {
 .nvd3 .axis text {
   text-shadow: 0 1px 0 #fff;
 }
+
+.link {
+  stroke: #999;
+  stroke-opacity: .6;
+}
+
+.node text {
+  font: 9px helvetica;
+}
+
+d3-tip {
+  line-height: 1;
+  color: black;
+}
