--- a/app/views/avant_data/_nav_menu.html.erb
+++ b/app/views/avant_data/_nav_menu.html.erb
@@ -51,7 +51,7 @@
 
              <div class="col-xs-6 col-sm-6">
               <a ng-click="switchVisualization('graph_chart')" href="#" class="thumbnail">
-                <%= image_tag "force_directed_graph.png"%>
+                <%= image_tag "graph_chart.png"%>
                 Graph Chart
               </a>
             </div>
